<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.perdian.apps.calendarhelper</groupId>
    <artifactId>calendarhelper</artifactId>
    <version>1.0.0-SNAPSHOT</version>

    <name>CalendarHelper</name>
    <url>https://github.com/perdian/calendarhelper</url>

    <scm>
        <url>https://github.com/perdian/calendarhelper</url>
        <connection>scm:git:https://github.com/perdian/calendarhelper.git</connection>
        <developerConnection>scm:git:https://github.com/perdian/calendarhelper.git</developerConnection>
    </scm>

    <developers>
        <developer>
            <id>perdian</id>
            <name>Christian Seifert</name>
            <email>dev@perdian.de</email>
        </developer>
    </developers>

    <properties>
        <commons-io.version>2.15.1</commons-io.version>
        <commons-lang3.version>3.14.0</commons-lang3.version>
        <commons-text.version>1.11.0</commons-text.version>
        <google-auth.version>1.21.0</google-auth.version>
        <google-api.version>2.2.0</google-api.version>
        <google-api-services-calendar.version>v3-rev20231123-2.0.0</google-api-services-calendar.version>
        <google-api-services-oauth2.version>v2-rev20200213-2.0.0</google-api-services-oauth2.version>
        <ikonli.version>12.3.1</ikonli.version>
        <java.version>21</java.version>
        <javafx.version>21.0.1</javafx.version>
        <javax-annotation.version>1.3.2</javax-annotation.version>
        <junit-jupiter.version>5.10.1</junit-jupiter.version>
        <logback.version>1.4.14</logback.version>
        <slf4j.version>2.0.10</slf4j.version>
        <spring.version>6.1.2</spring.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>${ikonli.version}</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-materialdesign2-pack</artifactId>
            <version>${ikonli.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${commons-lang3.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${commons-io.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>${commons-text.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>${spring.version}</version>
        </dependency>

        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>${javax-annotation.version}</version>
        </dependency>


        <dependency>
            <groupId>com.google.api-client</groupId>
            <artifactId>google-api-client</artifactId>
            <version>${google-api.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.auth</groupId>
            <artifactId>google-auth-library-oauth2-http</artifactId>
            <version>${google-auth.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.apis</groupId>
            <artifactId>google-api-services-calendar</artifactId>
            <version>${google-api-services-calendar.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.apis</groupId>
            <artifactId>google-api-services-oauth2</artifactId>
            <version>${google-api-services-oauth2.version}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.name}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <compilerArgs>--enable-preview</compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>de.perdian.apps.calendarhelper.CalendarHelperLauncher</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
            <plugin>
                <groupId>com.github.spotbugs</groupId>
                <artifactId>spotbugs-maven-plugin</artifactId>
                <version>4.8.2.0</version>
                <configuration>
                    <excludeFilterFile>.spotbugs-exclude.xml</excludeFilterFile>
                </configuration>
                <executions>
                    <execution>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>macos-bundle</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>de.perdian.maven.plugins</groupId>
                        <artifactId>macosappbundler-maven-plugin</artifactId>
                        <version>1.17.0</version>
                        <configuration>
                            <plist>
                                <CFBundleIconFile>src/bundle/macos/resources/calendar-regular.icns</CFBundleIconFile>
                                <JVMMainClassName>de.perdian.apps.calendarhelper.CalendarHelperLauncher</JVMMainClassName>
                                <JVMVersion>${java.version}+</JVMVersion>
                                <JVMOptions>
                                    <string>-Dapple.laf.useScreenMenuBar=true</string>
                                    <string>-Xdock:name=${project.name}</string>
                                    <string>--enable-preview</string>
                                </JVMOptions>
                            </plist>
                        </configuration>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>bundle</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
